<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/title"
        android:textColor="#177C3A"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header">

        <TextView
            android:id="@+id/header_language"
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/translate_switch"
            android:textColor="#4C9063"
            android:textSize="17sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/language_switcher"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:thumbTint="#4C9063"
            app:thumbTint="#4C9063"
            app:trackTint="#92DFAC"
            tools:ignore="UseSwitchCompatOrMaterialXml" />
    </LinearLayout>

    <EditText
        android:id="@+id/input"
        android:layout_width="350dp"
        android:layout_height="100dp"
        android:layout_marginTop="24dp"
        android:background="#DFF6E7"
        android:ems="10"
        android:gravity="top"
        android:hint="@string/input_hint"
        android:inputType="textMultiLine"
        android:padding="10dp"
        android:textColor="#4C9063"
        android:textSize="17sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <Button
        android:id="@+id/button"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="#177C3A"
        android:text="@string/button_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input" />

    <TextView
        android:id="@+id/output"
        android:layout_width="350dp"
        android:layout_height="100dp"
        android:layout_marginTop="24dp"
        android:background="#E6EFE9"
        android:gravity="top"
        android:hint="@string/output_hint"
        android:padding="10dp"
        android:textColor="#177C3A"
        android:textColorHint="#4C9063"
        android:textSize="17sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button" />

</androidx.constraintlayout.widget.ConstraintLayout>